--- a/angular.json
+++ b/angular.json
@@ -15,8 +15,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "webpack.config.js"
+            },
             "outputPath": "dist/rick-and-morty-tournament",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -64,7 +67,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "rick-and-morty-tournament:build"
           },
@@ -123,6 +126,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "rick-and-morty-tournament"
+    }
+  },
+  "defaultProject": "rick-and-morty-tournament",
+  "cli": {
+    "analytics": false
+  }
 }
